--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/Css/Style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <title>Hotel Express</title>
 </head>
 <body>
@@ -39,11 +41,10 @@
     <div id="hotelList-container">
         <div class="col-md-12">
             <div class="col-md-offset-6 preloader-img">
-                <img src="/Image/circlepreloader.gif" alt="Loading.." />
+                <img src="/Image/circlepreloader.gif" class="img-responsive" alt="Loading.." />
             </div>
         </div>
     </div>
-
     <div id="hotelList-container"></div>
     <script id="hotel-item" type="text/x-handlebars-template">
         <div class=" container heading text-center">
@@ -55,8 +56,8 @@
             <div class="col-md-12">
                 <section>
                     <!--Image-->
-                    <div class="col-md-3">
-                        <img src="{{image}}" width="200" height="200" alt="No Image Available" />
+                    <div class="col-md-3 wrapper">
+                        <img src="{{image}}" class="img-responsive" alt="No Image Available" />
                     </div>
                 </section>
                 <section>
@@ -64,7 +65,6 @@
                     <div class="col-md-7">
                         <h3 class="space underline-text">{{name}}</h3>
                         <h4 class="space"><span class="glyphicon glyphicon-map-marker green"></span> {{address}}</h4>
-                          
                         <h4 class="bold-text">
                             Rating:{{#times stars}}
                             <span class="glyphicon glyphicon-star orange"></span>
@@ -82,7 +82,6 @@
         </div>
         {{/each}}
     </script>
-    
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.min.js"></script>
     <script src="/Js/hotelListingScript.js"></script>
