--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/pricing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/pricing.html
@@ -59,7 +59,9 @@
                         <div class="col-md-8">
                             <div class="panel panel-pricing">
                                 <div class="panel-heading text-center">
-                                    <h3 class="underline-text">Booking Details</h3>
+                                    <ul class="price ">
+                                        <li class="header">Booking Details</li>
+                                    </ul>
                                 </div>
                                 <div class="panel-body">
                                     <p class="panel-font"><span class="underline-text"></span> <b>{{hotelName}}</b></p>
@@ -89,8 +91,6 @@
             </div>
             {{/each}}
         </script>
-       <footer class="foot text-center">Tavisca &copy; 2017|<a class="anchorLink" href="http://www.tavisca.com/">Open Company Website</a></footer>
-
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.min.js"></script>
     <script src="/Js/pricingScript.js" type=""></script>
