--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/guestdetails.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/guestdetails.html
@@ -75,7 +75,7 @@
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <label for="middleName">Middle Name</label>
-                                        <input type="text" class="form-control placeholderfont" id="middleName" name="middlename" placeholder="Middle Name" required>
+                                        <input type="text" class="form-control placeholderfont" id="middleName" name="middlename" placeholder="Middle Name">
                                     </div>
                                 </div>
                                 <!--Last Name-->
