--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
@@ -46,6 +46,21 @@
         </div>
     </div>
     <div id="hotelList-container"></div>
+    <script id="x" type="text/x-handlebars-template">
+        <div class=" container-heading heading" id="hotelnm">
+        </div>
+
+        <div class="container container-list heading border-panel">
+            <div class="col-md-12">
+                <div class="col-md-5">
+                    <h3 class="bold-text">Destination : {{destination}}</h3>
+                    <h4 class="bold-text">Check-In-Date : {{checkin}}</h4>
+                    <h4 class="bold-text">Check-Out-Date : {{checkout}}</h4>
+                </div>
+            </div>
+        </div>
+    </script>
+
     <script id="hotel-item" type="text/x-handlebars-template">
         <div class=" container heading text-center">
             <h1>Search Results</h1>
@@ -56,20 +71,21 @@
             <div class="col-md-12">
                 <section>
                     <!--Image-->
-                    <div class="col-md-3 wrapper">
+                    <div class="col-md-4 ">
                         <img src="{{image}}" class="img-responsive" alt="No Image Available" />
                     </div>
                 </section>
                 <section>
                     <!--Hotel Details-->
-                    <div class="col-md-7">
-                        <h3 class="space underline-text">{{name}}</h3>
-                        <h4 class="space"><span class="glyphicon glyphicon-map-marker green"></span> {{address}}</h4>
+                    <div class="col-md-6">
+                        <h3 class="underline-text">{{name}}</h3>
+                        <h4 class="bold-text">$ {{fare}}</h4>
                         <h4 class="bold-text">
-                            Rating:{{#times stars}}
+                            {{#times stars}}
                             <span class="glyphicon glyphicon-star orange"></span>
                             {{/times}}
                         </h4>
+                        <h4 class="space"><span class="glyphicon glyphicon-map-marker green"></span> {{address}}</h4>
                     </div>
                 </section>
                 <section>
