add client side error handling

--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/finalpage.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/finalpage.html
@@ -67,9 +67,10 @@
                                 </ul>
                             </div>
                             <div class="panel-body">
-                                <p class="panel-font">Booking-Id<b>{{bookingId}}</b></p>
-                                <p class="panel-font">Check-In :<b>{{checkin}}</b></p>
-                                <p class="panel-font">Check-Out:<b>{{checkout}}</b></p>
+                                <p class="bold-text">Booking-Id : {{bookingId}}</p>
+                                <p class="bold-text">Booking-Status : {{bookingStatus}}</p>
+                                <p class="bold-text">Check-In : {{checkin}} </p>
+                                <p class="bold-text">Check-Out: <span>{{checkout}}</span></p>
                             </div>
                         </div>
                     </div>
