--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/roomListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/roomListing.html
@@ -57,7 +57,7 @@
                     <img src="{{imageurl}}" class="img-responsive" alt="No Image Available" />
                 </div>
                 <div class="col-md-5">
-                    <h3 class="space underline-text">{{hotelname}}</h3>
+                    <h3 class="underline-text">{{hotelname}}</h3>
                     <h4 class="bold-text"><span class="glyphicon glyphicon-map-marker green"></span> {{address}}</h4>
                     <h4 class="bold-text">
                         Rating:{{#times rating}}
