--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/finalpage.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/finalpage.html
@@ -21,7 +21,7 @@
         <nav class="navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand">Rovia</a>
+                    <a class="navbar-brand">Hotel-Reservation</a>
                 </div>
                 <ul class=" nav navbar-nav navbar-right ">
                     <li class="navbar-nav nav">
@@ -67,10 +67,11 @@
                                 </ul>
                             </div>
                             <div class="panel-body">
-                                <p class="bold-text">Booking-Id : {{bookingId}}</p>
-                                <p class="bold-text">Booking-Status : {{bookingStatus}}</p>
-                                <p class="bold-text">Check-In : {{checkin}} </p>
-                                <p class="bold-text">Check-Out: <span>{{checkout}}</span></p>
+                                <h3> Dear <p class="bold-text">{{name}}</p></h3>
+                                <p> Your Booking-Id is : {{bookingId}}</p>
+                                <p> Your Check-In Date : {{checkin}} </p>
+                                <p> Your Check-Out Date: {{checkout}}</p>
+                                <p>Check Your Mail For the Details.Thank You for Booking With Us !</p>
                             </div>
                         </div>
                     </div>
