add error handling v2

--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/finalpage.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/finalpage.html
@@ -67,7 +67,7 @@
                                 </ul>
                             </div>
                             <div class="panel-body">
-                                <h3> Dear <p class="bold-text">{{name}}</p></h3>
+                                <h3> Dear {{name}}</h3>
                                 <p> Your Booking-Id is : {{bookingId}}</p>
                                 <p> Your Check-In Date : {{checkin}} </p>
                                 <p> Your Check-Out Date: {{checkout}}</p>
