--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
@@ -64,7 +64,7 @@
                     <!--Hotel Details-->
                     <div class="col-md-6">
                         <h3 class="underline-text">{{name}}</h3>
-                        <h4 class="bold-text">$ {{fare}}</h4>
+                        <h4 class="bold-text"><span class="currencyCode">{{currency}}</span>  {{fare}}</h4>
                         <h4 class="bold-text">
                             {{#times stars}}
                             <span class="glyphicon glyphicon-star orange"></span>
