--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/finalpage.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/finalpage.html
@@ -55,7 +55,7 @@
             <div class="col-md-12">
                 <!--View Details-->
                 <section>
-                    <div class="col-md-8">
+                    <div class="col-md-7">
                         <div class="panel panel-pricing">
                             <div class="panel-heading text-center">
                                 <ul class="price ">
@@ -76,14 +76,14 @@
                 </section>
                 <!--Section for button-->
                 <section>
-                    <div class="col-md-4 ">
+                    <div class="col-md-5">
 
-                        <div class="heading-panel"></div>
+                        <div class="heading-panel1"></div>
                         <div>
                             <ul class="price ">
                                 <li class="header">Total Amount Paid</li>
                                 <li class="grey panel-font bold-text"><span class="bold-text">{{currencyCode}}</span> {{totalPrice}}</li>
-                                <li><button name="startBtn" id="startButton" onClick="startPage()" class="button">OK</button></li>
+                                <li><button name="startBtn" id="startButton" onClick="startPage()" class="button">OK</button><span class="space"><button name="printBtn" id="printButton" onClick="printPage()" class="button">Print This</button></span></li>
                             </ul>
                         </div>
                     </div>
