--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
@@ -60,7 +60,7 @@
                     <!--Hotel Details-->
                     <div class="col-md-6">
                         <h3 class="underline-text">{{name}}</h3>
-                        <h4>Base Fare :<span class="bold-text">{{currency}}</span>  {{fare}}</h4>
+                        <h4>Base Fare : {{currency}} <span class="bold-text">{{fare}}</span></h4>
                         <h4 class="bold-text">
                             {{#times stars}}
                             <span class="glyphicon glyphicon-star orange"></span>
