--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/guestdetails.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/guestdetails.html
@@ -204,7 +204,8 @@
                 </div>
 
             </form>
-        </div>
+
+                <div id="loader" class="loader"></div>
     </article>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
