--- a/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
+++ b/HotelReservation/HotelReservationEngine/wwwroot/HtmlPages/hotelListing.html
@@ -3,43 +3,18 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="/Image/favicon-bed.png">
     <link rel="stylesheet" href="/Css/Style.css">
+    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
+    <link rel="icon" type="image/png" href="/Image/favicon-bed.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <title>Hotel Express</title>
 </head>
 <body>
-    <header>
-        <h6>.</h6>
-    </header>
-    <div class="col-md-12">
-        <nav class="navbar-inverse">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand">Hotel Reservation</a>
-                </div>
-                <ul class=" nav navbar-nav navbar-right ">
-                    <li class="navbar-nav nav">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Feedback</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Account <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Sign In</a></li>
-                            <li><a href="#">Create An Account</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </div>
-
+    <header><h6>.</h6></header>
+    <div class="col-md-12"><nav class=" navbar navbar-inverse"><div class="container-fluid"><div class="navbar-header"><button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a class="navbar-brand">Hotel Reservation</a></div><div class="collapse navbar-collapse" id="myNavbar"><ul class=" nav navbar-nav navbar-right "><li class="navbar-nav nav"><li><a href="#">Home</a></li><li><a href="#">About Us</a></li><li><a href="#">Feedback</a></li><li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Account <span class="caret"></span></a><ul class="dropdown-menu"><li><a href="#">Sign In</a></li><li><a href="#">Create An Account</a></li></ul></li></ul></div></div></nav></div>
     <div id="hotelList-container">
-            <div class="loader"></div>
+        <div class="loader"></div>
     </div>
     <div id="hotelList-container"></div>
     <script id="hotel-item" type="text/x-handlebars-template">
@@ -48,17 +23,14 @@
         </div>
         {{#each this}}
         <div class="container container-list border-panel">
-
-            <div class="col-md-12">
+            <div class="col-md-12 col-xs-12">
                 <section>
-                    <!--Image-->
-                    <div class="col-md-3">
+                    <div class="col-md-3  col-sm-4 col-xs-12">
                         <img src="{{image}}" class="img-responsive" alt="No Image Available" />
                     </div>
                 </section>
                 <section>
-                    <!--Hotel Details-->
-                    <div class="col-md-6">
+                    <div class="col-md-6  col-sm-5 col-xs-12">
                         <h3 class="underline-text">{{name}}</h3>
                         <h4>Base Fare : {{currency}} <span class="bold-text">{{fare}}</span></h4>
                         <h4 class="bold-text">
@@ -70,8 +42,7 @@
                     </div>
                 </section>
                 <section>
-                    <!--View Rooms Button-->
-                    <div class="col-md-3">
+                    <div class="col-md-3 col-sm-3 col-xs-12">
                         <button name="viewRoomsBtn" id="viewRoomsButton" value="{{name}}" onClick="roomDetails(this)" class="pageButton">View Rooms</button>
                     </div>
                 </section>
@@ -81,6 +52,8 @@
     </script>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="/Js/hotelListingScript.js"></script>
 </body>
 </html>
